# Password-Manager

./: .gitignore  README.md  eslint.config.mjs  package-lock.json  package.json
.github/: copilot-instructions.md
.github/workflows/: release.yml  rust.yml  tauri.yml  (+2 more)
app/: globals.css  layout.tsx  page.tsx
components/: About.tsx  AboutDialog.tsx  BreachedPasswordsCard.tsx  ContextMenuBlocker.tsx  CreateDatabaseDialog.tsx  CustomTitleBar.tsx  Dashboard.tsx  DatabaseConflictDialog.tsx  IconPicker.tsx  KdfWarningDialog.tsx  OpenRecentDialog.tsx  PasswordGenerator.tsx  PasswordStrengthMeter.tsx  QuickUnlockScreen.tsx  ResizablePanel.tsx  SearchHeader.tsx  Settings.tsx  UnlockScreen.tsx  UnsavedChangesDialog.tsx  breached-passwords-card.tsx  create-database-dialog.tsx  dashboard.tsx  entry-editor.tsx  entry-list.tsx  group-tree.tsx  icon-picker.tsx  kdf-warning-dialog.tsx  main-app.tsx  password-generator.tsx  password-strength-meter.tsx  quick-unlock-screen.tsx  recovery-key-dialog.tsx  settings.tsx  unlock-screen.tsx  unsaved-changes-dialog.tsx  zoom-provider.tsx
docs/: SIGNING.md
lib/: group-state.ts  keepass-icons.ts  password-strength.ts  storage.ts  tauri.ts  window.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/icons/: file-icon.icns  icon.icns
src-tauri/linux/: kdbx-mime.xml  simple-password-manager.desktop
src-tauri/nsis/: installer-hooks.nsh
src-tauri/src/: commands.rs  kdbx.rs  main.rs  state.rs
src-tauri/src/commands/: database.rs  entry.rs  group.rs  mod.rs  password.rs  search.rs  security.rs
src-tauri/src/kdbx/: attachment.rs  database.rs  entry.rs  error.rs  group.rs  mod.rs  search.rs  stats.rs  types.rs
src-tauri/wix/: file-icon-fragment.wxs
(+39 files in other folders)
