[package]
name = "simple-password-manager"
version = "1.0.0"
description = "A simple and secure password manager"
authors = ["Jonas Laux"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-clipboard-manager = "2.0"
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keepass = { version = "0.8.16", features = ["save_kdbx4"] }
chrono = "0.4"
rust-argon2 = "3.0"
secrecy = "0.8"
rand = "0.8"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
sha1 = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
